[package]
name = "logistics-api"
version = "0.1.1"
edition = "2021"
description = "Track your packages from all over the world. Supports logicsitcs from DHL, UPS, FedEx, USPS, and more."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.14", features = ["json", "blocking"] }
serde = { version = "1.0.156", features = ["derive"] }
serde_json = "1.0.94"
