[package]
name = "logistics-api"
version = "0.1.2"
edition = "2021"
description = "Track your packages from all over the world. Supports logicsitcs from DHL, UPS, FedEx, USPS, and more."
license = "MIT"
authors = ["Shahen Hovhannisyan <shahen.hovhannisyan.94@gmail.com>"]
repository = "https://github.com/shahen94/logistics-api"
documentation = "https://docs.rs/logistics-api"
readme = "README.md"
keywords = ["logistics", "dhl", "ups", "fedex", "usps"]
categories = ["api", "logistics", "tracking"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.14", features = ["json", "blocking"] }
serde = { version = "1.0.156", features = ["derive"] }
serde_json = "1.0.94"
